--- a/jenkinsPractice/pom.xml
+++ b/jenkinsPractice/pom.xml
@@ -93,6 +93,12 @@
 			<artifactId>extentreports</artifactId>
 			<version>5.0.9</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.projectlombok</groupId>
+					<artifactId>lombok</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
